--- a/portal/templates/index-remote-nav.html
+++ b/portal/templates/index-remote-nav.html
@@ -17,7 +17,7 @@
 <body>
 
     <img src="img/TrueNthHoldBackground.jpg" class="page-background" />
-    <div id="mainNav" class="nav-import">
+    <div id="mainNav" class="tnth-nav">
         <div class="container">
             <!-- Top Nav begins here -->
             <div class="">
