--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -18,42 +18,46 @@
 <body>
 
     <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background hidden-xs" />
-    <div id="mainNav" class="nav-import">
+    <div id="mainNav" class="tnth-nav">
        <!-- Top Nav begins here --> 
        <!-- Main Nav for most screen sizes -->
-        <div class="container hidden-xs main-nav">
+        <div class="container hidden-xs tnth-nav-main">
             <div class="pull-left nav-logos">
                 <a href="{{ config['PORTAL'] }}">
-                    <img src="{{ url_for('static', filename='img/logo_truenth.png') }}" />
+                    <img src="{{ url_for('static', filename='img/logo_truenth_alt.png') }}" />
                 </a>
-                <a href="http://us.movember.com">
-                    <img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
             </div>
             
             <div class="pull-right nav-links">
-                <a href="#" class="btn btn-default">About</a>
-                <a href="#" class="btn btn-default">Help</a>
                 <form class="navbar-form" role="search">
                     <div class="form-group">
                         <div class="hide-initial" id="search-box">
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input type="text" class="form-control" placeholder="Search TrueNTH">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
+                    <button type="submit" class="btn tnth-white show-search"><i class="fa fa-search fa-lg"></i></button>
                 </form>
+                <div class="btn-group nav-userinfo">
+                    <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                        <i class="fa fa-question fa-2x"></i>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">About TrueNTH</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
         <!-- Responsive navbar for xs width -->
-        <nav class="navbar navbar-static-top visible-xs xs-nav">
+        <nav class="navbar navbar-static-top visible-xs tnth-nav-xs">
             <div class="container-fluid">
               <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button" class="tnth-white navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                   <span class="sr-only">Toggle menu</span>
                   <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
                 </button>
-                <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/logo_truenth.png') }}" /></a>
-                <a class="navbar-brand logo-movember" href="#"><img src="{{ url_for('static', filename='img/logo_movember.png') }}" /></a>
+                <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/logo_truenth_alt.png') }}" /></a>
               </div>
               <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                 <ul class="nav navbar-nav">
@@ -63,7 +67,7 @@
                 <form class="navbar-form" role="search">
                     <div class="form-group">
                         <div>
-                            <input type="text" class="form-control" placeholder="Search">
+                            <input type="text" class="form-control" placeholder="Search TrueNTH">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default">Search</button>
@@ -78,26 +82,52 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
                 <div class="well lead-well">
                     <p>TrueNTH is a revolutionary new program, funded by the Movember Foundation, that will sigificantly improve the physical and mental health of men diagnosed and living with prostate cancer.</p>
 
-                    <p>TrueNTH online give you the tools to feel knowledgeable and confident about managing your condition.</p>
-                    <hr />
+                    <p>TrueNTH helps men and their families get their lives back on track following diagnosis and treatment.</p>
+                    <p>TrueNTH helps you feel knowledgeable and confident on your journey.</p>
+
                     <div class="row">
-                        <div class="col-xs-12">
-                            <p class="lead">Log in to an existing account or create a new one</p>
-                            <div class="text-center">
-                                <a href="login" class="btn btn-primary btn-tnth-primary"><i class="fa fa-facebook-official"></i>&nbsp; Sign In with Facebook</a>
-                                <div style="margin: 1em 0 1em">or</div>
-                                <a href="portal.html" class="btn btn-primary btn-tnth-primary"><i class="fa fa-user"></i>&nbsp; Sign In with Movember</a>
-                            </div>
+                        <div class="col-xs-5">
+                            <h4>Sign in with:</h4>
+                            <a href="login" class="btn btn-block btn-social btn-facebook">
+                                <i class="fa fa-facebook"></i>
+                                Facebook
+                            </a><br />
+                            <a class="btn btn-block btn-social btn-google" disabled>
+                                <i class="fa fa-google"></i>
+                                Google
+                            </a><br />
+                            <a class="btn btn-block btn-social btn-movember" disabled>
+                                <img src="{{ url_for('static', filename='img/icon_movember.png') }}" />
+                                Movember
+
+                            </a><br />
                         </div>
+                        <div class="col-sm-2 text-muted text-center hidden-xs">
+                            <div style="margin-top: 4.5em; padding: 0.5em; background-color: #aaa; color: #fff; border-radius: 4px; display: inline-block">or</div>
+                        </div>
+                        <div class="col-xs-7 col-sm-5">
+                            <h4>Sign in with TrueNTH:</h4>
+                            <form>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-tnth-primary">Sign In</button>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
