TrueNTH portal - CSS fix.

--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background hidden-xs" />
-    <div id="mainNav" class="tnth-nav">
+    <div id="mainNav" class="tnth-nav-wrapper">
        <!-- Top Nav begins here --> 
        <!-- Main Nav for most screen sizes -->
         <div class="container hidden-xs tnth-nav-main">
