--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -1,89 +1,93 @@
-<div class="container hidden-xs tnth-nav-main">
-    <div class="pull-left nav-logos">
-        <!-- Probably need to use absolute links for images -->
-        <a href="{{PORTAL}}"><img src="{{PORTAL}}{{logo_truenth_alt}}" /></a>
-    </div>
+<div class="tnth-nav-wrapper">
 
-    <div class="pull-right nav-links">
-        <a href="" class="btn btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
-        {% if username %}
-        <div class="btn-group nav-userinfo">
-          <button type="button" class="btn tnth-white btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            Welcome, {{ username }}
-              <img src="{{PORTAL}}{{movember_profile}}" />
-              <span class="fa fa-caret-down"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="{{PORTAL}}/profile">My Profile</a></li>
-            <li><a href="{{PORTAL}}/logout">Log Out</a></li>
-          </ul>
+    <div class="container hidden-xs tnth-nav-main">
+        <div class="pull-left nav-logos">
+            <!-- Probably need to use absolute links for images -->
+            <a href="{{PORTAL}}"><img src="{{PORTAL}}{{logo_truenth_alt}}" /></a>
         </div>
-        {% endif %}
-        <a class="btn tnth-white dropdown-toggle" href="{{PORTAL}}" title="Return to TrueNTH Home">
-            <i class="fa fa-home fa-2x"></i>
-        </a>
-        <form class="navbar-form" role="search">
-            <div class="form-group">
-                <div class="hide-initial" id="search-box">
-                    <input type="text" class="form-control" placeholder="Search TrueNTH">
-                </div>
+
+        <div class="pull-right nav-links">
+            <a href="" class="btn btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
+            {% if username %}
+            <div class="btn-group nav-userinfo">
+                <button type="button" class="btn tnth-white btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    Welcome, {{ username }}
+                    <img src="{{PORTAL}}{{movember_profile}}" />
+                    <span class="fa fa-caret-down"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="{{PORTAL}}/profile">My Profile</a></li>
+                    <li><a href="{{PORTAL}}/logout">Log Out</a></li>
+                </ul>
             </div>
-            <button type="submit" class="btn tnth-white show-search"><i class="fa fa-search fa-lg"></i></button>
-        </form>
-        <div class="btn-group nav-userinfo">
-            <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-question fa-2x"></i>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Help</a></li>
-                <li><a href="#">About TrueNTH</a></li>
-            </ul>
-        </div>
-        <!--<div class="pull-right text" style="margin-top: 1em">
-            <em>You are currently using <span id="intName"></span></em> &nbsp;
-            <a href="{{PORTAL}}" class="btn btn-sm btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
-        </div>
-         Removing search for now
-        <form class="navbar-form" role="search">
-            <div class="form-group">
-                <div class="hide-initial" id="search-box">
-                    <input type="text" class="form-control" placeholder="Search">
+            {% endif %}
+            <a class="btn tnth-white dropdown-toggle" href="{{PORTAL}}" title="Return to TrueNTH Home">
+                <i class="fa fa-home fa-2x"></i>
+            </a>
+            <form class="navbar-form" role="search">
+                <div class="form-group">
+                    <div class="hide-initial" id="search-box">
+                        <input type="text" class="form-control" placeholder="Search TrueNTH">
+                    </div>
                 </div>
+                <button type="submit" class="btn tnth-white show-search"><i class="fa fa-search fa-lg"></i></button>
+            </form>
+            <div class="btn-group nav-userinfo">
+                <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <i class="fa fa-question fa-2x"></i>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">About TrueNTH</a></li>
+                </ul>
             </div>
-            <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
-        </form>
-        -->
+            <!--<div class="pull-right text" style="margin-top: 1em">
+                <em>You are currently using <span id="intName"></span></em> &nbsp;
+                <a href="{{PORTAL}}" class="btn btn-sm btn-default"><i class="fa fa-chevron-left"></i> Back to TrueNTH Home</a>
+            </div>
+             Removing search for now
+            <form class="navbar-form" role="search">
+                <div class="form-group">
+                    <div class="hide-initial" id="search-box">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-default show-search"><i class="fa fa-search"></i></button>
+            </form>
+            -->
+        </div>
     </div>
+    <!-- Responsive navbar for xs width -->
+    <nav class="navbar navbar-static-top visible-xs tnth-nav-xs">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle menu</span>
+                    <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
+                </button>
+                <a class="navbar-brand" href="#"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                <ul class="nav navbar-nav">
+                    {% if username %}
+                    <li><a href="#">My Profile</a></li>
+                    {% endif %}
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Help</a></li>
+                    {% if username %}
+                    <li><a href="{{PORTAL}}/logout">Log Out</a></li>
+                    {% endif %}
+                </ul>
+                <form class="navbar-form" role="search">
+                    <div class="form-group">
+                        <div>
+                            <input type="text" class="form-control" placeholder="Search TrueNTH">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
 </div>
-<!-- Responsive navbar for xs width -->
-<nav class="navbar navbar-static-top visible-xs tnth-nav-xs">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle menu</span>
-          <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
-        </button>
-        <a class="navbar-brand" href="#"><img src="{{PORTAL}}{{logo_truenth}}" /></a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
-        <ul class="nav navbar-nav">
-            {% if username %}
-            <li><a href="#">My Profile</a></li>
-            {% endif %}
-            <li><a href="#">About</a></li>
-            <li><a href="#">Help</a></li>
-            {% if username %}
-            <li><a href="{{PORTAL}}/logout">Log Out</a></li>
-            {% endif %}
-        </ul>
-        <form class="navbar-form" role="search">
-            <div class="form-group">
-                <div>
-                    <input type="text" class="form-control" placeholder="Search TrueNTH">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-default">Search</button>
-        </form>
-      </div>
-    </div>
-</nav>
