--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -35,7 +35,7 @@
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-question fa-2x"></i>
                 </button>
-                <ul class="dropdown-menu" role="menu">
+                <ul class="dropdown-menu pull-right" role="menu">
                     <li><a href="#">Help</a></li>
                     <li><a href="#">About TrueNTH</a></li>
                 </ul>
