TrueNTH portal -  styles fixes when calling portal wrapper from interventions.

--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -28,6 +28,8 @@
     border-color: transparent;
     transition: all 0.2s ease-in-out 0s;
     -webkit-transition: all 0.2s ease-in-out 0s;
+    text-shadow: none;
+    background-image: none;
 }
 .tnth-white:hover,
 .tnth-white:focus,
