--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -9,7 +9,7 @@
         <div class="pull-right nav-links">
             {% if username %}
             <div class="btn-group nav-userinfo">
-                <button type="button" class="btn tnth-white btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     Welcome, {{ username }}
                     <img src="{{PORTAL}}{{movember_profile}}" />
                     <span class="fa fa-caret-down"></span>
