--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -65,8 +65,17 @@
                                 </div>
                                 <button type="submit" class="btn btn-tnth-primary">Sign In</button>
                             </form>
+                            <br />
+                            <p class="pull-right"><a href="#">Forgot your password?</a></p>
                         </div>
 
+                    </div>
+                    <hr />
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h4>Create a New TrueNTH Account</h4>
+                            <p>Don't have a TrueNTH login? <a href="#">Sign up for a free account</a>.</p>
+                        </div>
                     </div>
                 </div>
             </div>
