Using user.image_url if available for portrait in portal_header
NB - only works in protected_portal_wrapper_html()

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -11,7 +11,7 @@
             <div class="btn-group nav-userinfo">
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     Welcome, {{ username }}
-                    <img src="{{PORTAL}}{{movember_profile}}" />
+                    <img src="{{movember_profile}}" />
                     <span class="fa fa-caret-down"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
