--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -30,7 +30,7 @@
                     <h3>Decision Support</h3>
                     <div class="int-sub">What treatment is best for me?</div>
                     <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
-                    <p><a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Go to intervention <i class="fa fa-chevron-right"></i></a></p>
+                    <p><a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a></p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
@@ -38,7 +38,7 @@
                     <h3>Self Management</h3>
                     <div class="int-sub">How do I cope with my symptoms?</div>
                     <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Go to intervention <i class="fa fa-chevron-right"></i></a></p>
+                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
@@ -46,7 +46,7 @@
                     <h3>Care Plan</h3>
                     <div class="int-sub">How to I help with my symptoms?</div>
                     <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-tnth-primary" disabled>Coming soon</a></p>
+                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Care Plan  <i class="fa fa-chevron-right"></i></button></p>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                     <h3>Community of Wellness</h3>
                     <div class="int-sub">How can I be healthy?</div>
                     <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-tnth-primary" disabled>Coming soon</a></p>
+                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
@@ -64,7 +64,7 @@
                     <h3>Sexual Recovery</h3>
                     <div class="int-sub">What about sex?</div>
                     <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-tnth-primary" disabled>Coming soon</a></p>
+                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
@@ -72,7 +72,7 @@
                     <h3>Social Support Network</h3>
                     <div class="int-sub">Who can I talk with?</div>
                     <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-tnth-primary" disabled>Coming soon</a></p>
+                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
                 </div>
             </div>                        
         </div>        
@@ -89,6 +89,9 @@ PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/porta
 PORTAL_HOSTNAME = new URL(PORTAL_NAV_PAGE).hostname;
 
 $(document).ready(function(){
+
+    $('[data-toggle="popover"]').popover();
+
     equalHeightBoxes("lead-well");
     $(window).resize(function() {
         // Fire resize if browser window size changes. Delay by 200ms to avoid
